--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,9 @@
 
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+//homepage
+@import 'resources/sass/_style_home.scss';
 
-// Variables
-@import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+// Bootstrap especificar posteriormente quais classes estao sendo ultlizadas
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
+
