--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,17 @@
 /*=========================================================
-home page estilo
+template estilo
 ===========================================================*/
+
+* {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  outline: none;
+  border: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -box-sizing: border-box;
+}
 
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
