--- a/resources/sass/_style_home.scss
+++ b/resources/sass/_style_home.scss
@@ -1,4 +1,14 @@
 /*=========================================================
-home page estilo
+template estilo
 ===========================================================*/
-
+*{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    outline: none;
+    border: none;
+     
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+           -box-sizing: border-box;
+}
