--- a/public/css/temple1.css
+++ b/public/css/temple1.css
@@ -1,42 +1,58 @@
 #nav_temple1{
-  
     width: 100%;
     height: 80px;
     background-color: #82131f;
-    position: absolute;
-    
-
+    position: relative;
 }
-li{
-    display: inline-block;
-    margin-left: 5%;
-}
-
-
 .position_menu{
     position: absolute;
     width: 61%;
     height: 20px;
     transform: translateX(-50%) translateY(-50%);
     top: 50%;
-    left: 50%;
-    
+    left: 50%; 
+    background-color: blue; 
 }
 .menu{
-    
+    text-align: justify;
+    display: inline-block;
     width: 70%;
     height: 20px;
     background-color: aqua;
     font-family: 'Roboto', sans-serif;
-
+}
+.menu::after{
+    display: inline-block;
+    content: '';
+    width: 100%;
+}
+.nav_int{
+    display: inline-block;   
 }
 .icon_position{
-    position:absolute;
+    position: absolute;
+    text-align: justify;
     left: 85%;
     width: 15%;
-    height: 20px;
-    transform:  translateY(-20px);
+    height: 60px;
     background-color: blueviolet;
+}
+.nav_int1, .nav_int2, .nav_int3{
+    display: inline-block; 
+    
+}
+.icon_position::after{
+    display: inline-block;
+    content: '';
+    width: 100%;
+}
+.nav_int3{
+ position: relative;
+ font-size: 20px;
+}
+.value_bag{
+    right: 5px;
+    position: absolute;
 }
 
 
@@ -49,30 +65,3 @@ a{
 
 }
 
-
-.nav_int1{
-    width: 10%;
-    height: 20px;
-    background-color: black;
-    text-align: center;
-    
-}
-.nav_int2{
-    width: 10%;
-    height: 20px;
-    background-color: black;
-    text-align: center;
-}
-.nav_int3{
-    width: 25%;
-    height: 20px;
-    background-color: black;
-    text-align: center;
-}
-.nav_int4{
-    width: 25%;
-    height: 30px;
-    background-color: black;
-    text-align: center;
-    border-bottom: 8px solid #aaaaaa;
-}
